image tag added

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
   <head>
-    <title><h1>I LOVE MOMO</h1></title>
+    <title>I LOVE MOMO</title>
   </head>
   <body>
 
-
+    <h1>I LOVE MOMO</h1>
+    <%= image_tag "card_Tina.jpg" %>
 
   </body>
 </html>
