--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <body>
 
     <h1>I LOVE MOMO</h1>
-    <%= image_tag "card_Tina.jpg" %>
+    <img src="card_Tina.jpg">
+    
 
   </body>
 </html>
