added image link

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <body>
 
     <h1>I LOVE MOMO</h1>
-    <img src="card_Tina.jpg">
-    
+    <img src="images/card_Tina.jpg">
+
 
   </body>
 </html>
